fix(ROI Tool): updates to styling so that tooltips can expand out onto the page and hiding some narrative in an optional dropdown
Update to reflect changes to global css allowing cells to expand into rest of body. This broke the width of the country/crop/region select. Hiding some narrative as to not overwhem reader and allow them to get to the fun interactive bits faster

BREAKING CHANGE: Broke the width do the top select

--- a/notebooks/roi/economicReturns.qmd
+++ b/notebooks/roi/economicReturns.qmd
@@ -19,6 +19,8 @@ import {
   atlasTOC,
   atlasHero,
   dropdown_section,
+  downloadButton,
+  makeTooltipLabel,
 } from "/helpers/uiComponents.ojs";
 
 hero_url = "./../../images/default_crop.webp";
@@ -35,13 +37,17 @@ md`${_lang(nbText.overview.blocks.block1)}`;
 
 md`${_lang(nbText.overview.blocks.block2)}`;
 
-md`${_lang(nbText.indicators.irr.overview)}`;
+dropdown_section(
+  "Definitions",
+  false,
+  md`${_lang(nbText.indicators.irr.overview)}`,
 
-md`${_lang(nbText.indicators.mirr.overview)}`;
+  md`${_lang(nbText.indicators.mirr.overview)}`,
 
-md`${_lang(nbText.indicators.npv.overview)}`;
+  md`${_lang(nbText.indicators.npv.overview)}`,
 
-md`${_lang(nbText.indicators.bcr.overview)}`;
+  md`${_lang(nbText.indicators.bcr.overview)}`,
+);
 
 md`${_lang(nbText.overview.blocks.block3)}`;
 
@@ -55,11 +61,12 @@ md`${_lang(nbText.overview.blocks.block4)}`;
 `{ojs} _lang(nbText.projectSetup.blocks.opener2)`
 
 ```{ojs}
+//TODO: This needs to become a form so styling is consistent with rest...
 htl.html`
-  <div style="display: flex; gap: 3em; flex-wrap: wrap;">
-    <div>${viewof select_country}</div>
-    <div>${viewof select_region}</div>
-    <div>${viewof select_crop}</div>
+  <div style="display: inline-flex; gap: 3em;">
+    ${viewof select_country}
+    ${viewof select_region}
+    ${viewof select_crop}
   </div>
 `
 ```
@@ -583,43 +590,7 @@ viewof pickMetricWalkthrough = {
 ## Elements
 
 ```{ojs}
-function makeTooltipLabel({
-  labelText = "Dropdown label",
-  tooltipText = "Tooltip text",
-} = {}) {
-  return htl.html`
-    <span
-      data-title="${tooltipText}"
-      style="
-        position:relative;
-        cursor:pointer;
-      "
-    >${labelText}</span>
-    <style>
-      [data-title]:hover::after {
-        content: attr(data-title);
-        position: absolute;
-        left: 0;
-        top: 100%;
-        background: #efefef;
-        color: #333;
-        font-size: 14px;
-        padding: 6px 10px;
-        border-radius: 4px;
-        box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        white-space: nowrap;
-        z-index: 9999;
-      }
-    </style>
-  `;
-}
-```
-
-```{ojs}
-import {
-  dropdownInput,
-  dropdownCSS,
-} from "@adaptationatlas/data-spotlight-multi-select";
+import { dropdownInput, dropdownCSS } from "/helpers/uiComponents.ojs";
 
 dropdownCSS;
 ```
@@ -972,7 +943,8 @@ bigNumbersResults = () => {
     return { ...d, value };
   });
 
-  return htl.html`<style>
+  return htl.html`
+  <style>
     .outer-div {
       display: flex;
       gap: 2em;
