fix(ROI Tool): Call s3 Path for exposure data

--- a/notebooks/roi/economicReturns.qmd
+++ b/notebooks/roi/economicReturns.qmd
@@ -241,11 +241,10 @@ htl.html`
 //TODO: Move this to s3 paths
 db = {
   let db = await DuckDBClient.of({
-    exposure_raw: FileAttachment("/data/economicReturns/exposure_adm_sum_spam20-21_glw420-21.parquet"),
     cv_raw: FileAttachment("/data/economicReturns/faostat_prod_cv.parquet")
   })
   await db.query(`
-    CREATE VIEW exposure AS
+    CREATE TABLE exposure AS  -- data is ~ 1 mb so table possibly more performant
       SELECT
         iso3,
         admin0_name,
@@ -253,12 +252,11 @@ db = {
         REGEXP_REPLACE(crop, '-tropical|-highland', '') AS crop,
         CONCAT(exposure, '_', unit) AS exposure,
         SUM(value) AS value
-      FROM exposure_raw
+      FROM read_parquet("s3://digital-atlas/domain=exposure/type=combined/source=glw4-2020_spam2020AA/region=ssa/processing=atlas-harmonized/variable=vop_nominal-usd-2021.parquet")
       WHERE
         admin2_name IS NULL
         AND (tech = 'all' OR tech IS NULL)
         AND isfinite(value)
-        AND CONCAT(exposure, '_', unit) = 'vop_usd'
         AND crop !~ '(^other-|rest-of|temperate-fruit|tropical-fruit|vegetables)'
       GROUP BY
         iso3,
