feat(ROI Rool): Add download button & fix table/multi-select overlap issues.

--- a/notebooks/roi/economicReturns.qmd
+++ b/notebooks/roi/economicReturns.qmd
@@ -61,9 +61,8 @@ md`${_lang(nbText.overview.blocks.block4)}`;
 `{ojs} _lang(nbText.projectSetup.blocks.opener2)`
 
 ```{ojs}
-//TODO: This needs to become a form so styling is consistent with rest...
 htl.html`
-  <div style="display: inline-flex; gap: 3em;">
+<div style="display: flex; gap: 3em;">
     ${viewof select_country}
     ${viewof select_region}
     ${viewof select_crop}
@@ -151,6 +150,11 @@ bigNumbersResults();
 
 ```{ojs}
 resultTable();
+downloadButton(
+  walkthroughEconomicIndicators?.enriched,
+  "roi_data.csv",
+  _lang({ en: "Download", fr: "Télécharger" }),
+);
 ```
 
 ```{ojs}
@@ -1057,7 +1061,7 @@ resultTable = () => {
       }
       .econ-table th {
         background-color: #f4f4f4;
-        white-space: nowrap;
+        white-space: normal;
         text-align: center;
       }
       .econ-table td.year-col {
