feat(ROI Tool): Add sliders in the advanced section so users can choose BCR and Discount Rate

--- a/notebooks/roi/economicReturns.qmd
+++ b/notebooks/roi/economicReturns.qmd
@@ -136,7 +136,36 @@ Choose your model parameters for the analysis.
 viewof options_econPerfWalkthrough = render_econPerfWalkthrough();
 ```
 
-`{ojs} dropdown_section("Advanced Controls", false, "Stuff for experts")`
+```{ojs}
+{
+  const _discountLabel = makeTooltipLabel({
+    labelText: "Discount Rate",
+    tooltipText: "The Discount rate is...",
+  })
+
+  const _roiLabel = makeTooltipLabel({
+    labelText: "ROI",
+    tooltipText: "The ROI is...",
+  })
+
+  return dropdown_section(
+    "Advanced Controls",
+    false,
+    Inputs.bind(
+      Inputs.range(
+        [0, 1],
+        {step: 0.01, format: x => (x * 100), label : _discountLabel, value: 0.12} 
+      ), viewof discountRate
+    ),
+    Inputs.bind(
+      Inputs.range(
+        [0.5, 2],
+        {step: 0.01, label: _roiLabel, value: 1.62} 
+      ), viewof bcr
+    )
+  )
+}
+```
 
 # `{ojs} heading2` {#investment-returns}
 
@@ -566,13 +595,8 @@ render_econPerfWalkthrough = () => {
 ### Advanced Control Variables
 
 ```{ojs}
-//TODO:
-// -[x] years, cost, Prod Impact,Adoption, Reduction of impacts, CIS Impact
-// -[ ] BCR
-// -[ ] CIS impact
-
-discountRate = 0.12;
-bcr = 1.62;
+viewof discountRate = Inputs.range([0, 1],{step: 0.01, format: x => (x * 100), label : "Discount Rate", value: 0.12} ) // 0-1 as a pct
+viewof bcr = Inputs.range([0.5, 2], {step: 0.01, label: "BCR", value: 1.62} )
 ```
 
 ### Other Selections
