feat(glossary): Add language toggle to navbar, add basic search and basic TOC.

--- a/docs/doc_index.qmd
+++ b/docs/doc_index.qmd
@@ -6,3 +6,5 @@ title: "Adaptation Atlas Documentation Index"
 
 - [Guidelines for Observable Notebooks](/docs/nb_guidelines.qmd)
 - [Notebook Translation Guide](/docs/translation.qmd)
+- [Glossary](/docs/glossary.qmd)
+
