docs(glossary): Basic cleaning and changes to some page text

--- a/docs/glossary.qmd
+++ b/docs/glossary.qmd
@@ -1,8 +1,9 @@
 ---
 pagetitle: "Atlas Glossary"
 nb-authors:
-  - Brayden Youngberg
   - Hannah Lang
+  - Lolita Muller
+  - Brayden Youngberg
   - Pete Stewart
 date-created: "2025-11-10"
 date-edited: today
@@ -10,7 +11,7 @@ filters:
   - ./../helpers/glossaryToJSON.lua
 ---
 
-# Glossary
+# Atlas Definitions
 
 ```{=html}
 <div id="toc" style="margin-bottom: 30px;"></div>
@@ -158,7 +159,7 @@ function renderTOC() {
   });
 
   // Start HTML
-  let tocHtml = '<h2 style="margin-bottom: 10px;">Contents</h2>';
+  let tocHtml = '<h2 style="margin-bottom: 10px;">Sections:</h2>';
   tocHtml += '<div style="display: flex; flex-wrap: wrap; gap: 6px; align-items: center;">';
 
   // Add links inline with separators
