feat(glossary): Add button to return to top of page

--- a/docs/glossary.qmd
+++ b/docs/glossary.qmd
@@ -70,6 +70,7 @@ if (navEnd) {
       input.addEventListener("change", e => {
         if (e.target.checked) {
           currentLang = lang.code;
+          window.currentLang = lang.code;
           renderGlossary();
           renderTOC();
           updateSearchPlaceholder();
@@ -109,11 +110,11 @@ fetch("./../../data/shared/glossary.json")
       // currentLang = localStorage.getItem('glossaryLang') || 'EN';
       radio.addEventListener('change', event => {
         currentLang = event.target.value;
-        // localStorage.setItem('glossaryLang', currentLang);
         updateSearchPlaceholder();
         renderGlossary();
         renderTOC();
         attachTOCListeners();
+        updateBackToTopLabel();
       });
     });
 
@@ -246,7 +247,7 @@ function renderGlossary() {
                   ${entry.Term}${acronym ? ` (${acronym})` : ''}
                  </h2>`;
         if (tooltip)
-          html += `<p style="color: #666; font-style: italic; margin: 5px 0; font-size: 0.9em;">${tooltip}</p>`;
+          html += `<p style="color: #667; font-style: italic; margin: 5px 0; font-size: 0.9em;">${tooltip}</p>`;
         if (definition)
           html += `<p style="color: #444; line-height: 1.6; margin-top: 10px;">${definition}</p>`;
         html += '</div>';
@@ -258,8 +259,47 @@ function renderGlossary() {
 }
 </script>
 
-```
-```
+<button id="backToTopBtn" class="back-to-top">↑ Top</button>
 
-```
-```
+<style>
+.back-to-top {
+  position: fixed;
+  bottom: 25px;
+  right: 30px;
+  padding: 12px 16px;
+  font-size: 16px;
+  cursor: pointer;
+  display: none; /* Hidden by default */
+  border: none;
+  border-radius: 6px;
+  background-color: #333;
+  color: white;
+}
+</style>
+
+<script>
+const btn = document.getElementById('backToTopBtn');
+
+function updateBackToTopLabel() {
+ btn.textContent = currentLang === "FR" ? "↑ Haut" : "↑ Top";
+}
+
+updateBackToTopLabel();
+
+// Show/hide button on scroll
+window.addEventListener('scroll', () => {
+  if (window.scrollY > 300) {
+    btn.style.display = 'block';
+  } else {
+    btn.style.display = 'none';
+  }
+});
+
+// Scroll smoothly to top when clicked
+btn.addEventListener('click', () => {
+  window.scrollTo({
+    top: 0,
+    behavior: 'smooth'
+  });
+});
+</script>
